name:                hoogle-index
version:             0.3.3
synopsis:            Easily generate Hoogle indices for installed packages
description:
    'hoogle-index' is a small utility for generating indicies for local
    Hoogle installations.
    .
    > $ cabal install hoogle hoogle-index
    > $ hoogle-index    # this will take a while
    .
    Your Hoogle index now covers all of the packages locally installed.

homepage:            http://github.com/bgamari/hoogle-index
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari <ben@smart-cactus.org>
maintainer:          Ben Gamari <ben@smart-cactus.org>
copyright:           (c) 2014 Ben Gamari
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/bgamari/hoogle-index

executable hoogle-index
  main-is:             Main.hs
  other-extensions:    TupleSections
  build-depends:       base >=4.6 && <4.8,
                       transformers >=0.3 && <0.5,
                       directory >=1.2 && <1.3,
                       process >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       errors >=1.4 && <1.5,
                       bytestring >=0.9 && <1.11,
                       temporary >=1.2 && <1.3,
                       Cabal >=1.20 && <1.21,
                       containers >=0.4 && <0.6,
                       optparse-applicative >=0.10 && <0.11,
                       hoogle >= 4.2 && <4.3
  default-language:    Haskell2010
